<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StudentAllForms.StudentApplyForBusActivity"
    android:background="@drawable/backgr">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white">

                    <TextView
                        android:id="@+id/BusformText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/bus_form_application"
                        android:fontFamily="@font/poppins_medium"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20dp" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/logInLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/white"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:paddingBottom="20dp">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="5dp"
                        android:hint="Full Name"
                        app:boxStrokeColor="@color/colorPrimary"
                        app:boxStrokeWidth="1dp"
                        app:helperText="Required*"
                        app:helperTextTextColor="@color/red"
                        app:hintTextColor="@color/colorPrimary">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="text"
                            android:textColor="@color/colorPrimary"
                            android:textSize="13sp"
                            android:textStyle="normal" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"

                        android:layout_marginTop="5dp"
                        android:layout_marginRight="5dp"
                        android:backgroundTint="@color/white"
                        android:hint="System ID"
                        app:boxStrokeColor="@color/colorPrimary"
                        app:boxStrokeWidth="1dp"
                        app:helperText="Required*"
                        app:helperTextTextColor="@color/red"
                        app:hintTextColor="@color/colorPrimary">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtstid"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="text"
                            android:textColor="@color/colorPrimary"
                            android:textSize="13sp"
                            android:textStyle="normal" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="5dp"
                        android:hint="@string/course"
                        app:boxStrokeColor="#4E4A4A"
                        app:boxStrokeWidth="1dp"
                        app:helperText="Required*"
                        app:helperTextTextColor="@color/red"
                        app:hintTextColor="#4E4A4A">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/stdcource"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="text"
                            android:textColor="@color/colorPrimary"
                            android:textSize="13sp"
                            android:textStyle="normal" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="5dp"
                        android:hint="Semester"
                        app:boxStrokeColor="@color/colorPrimary"
                        app:boxStrokeWidth="1dp"
                        app:helperText="Required*"
                        app:helperTextTextColor="@color/red"
                        app:hintTextColor="#4E4A4A">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/stdsemester"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="text"
                            android:textColor="@color/colorPrimary"
                            android:textSize="13sp"
                            android:textStyle="normal" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:text="Shift" />

                        <RadioGroup
                            android:id="@+id/radioGroup"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_marginTop="20dp"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/morning"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:onClick="checkbtn"
                                android:text="@string/morning" />

                            <RadioButton
                                android:id="@+id/evening"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:onClick="checkbtn"
                                android:text="@string/evening" />
                        </RadioGroup>
                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="5dp"
                        android:hint="Challan No"
                        app:boxStrokeColor="@color/colorPrimary"
                        app:boxStrokeWidth="1dp"
                        app:helperText="Required*"
                        app:helperTextTextColor="@color/red"
                        app:hintTextColor="#4E4A4A">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/stdBuschallan"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="text"
                            android:textColor="@color/colorPrimary"
                            android:textSize="13sp"
                            android:textStyle="normal" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="5dp"
                        android:hint="Bus No"
                        app:boxStrokeColor="@color/colorPrimary"
                        app:boxStrokeWidth="1dp"
                        app:helperText="Required*"
                        app:helperTextTextColor="@color/red"
                        app:hintTextColor="#4E4A4A">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/stdbusno"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="number"
                            android:textColor="@color/colorPrimary"
                            android:textSize="13sp"
                            android:textStyle="normal" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="5dp"
                        android:hint="@string/stop_name"
                        app:boxStrokeColor="@color/colorPrimary"
                        app:boxStrokeWidth="1dp"
                        app:helperText="Required*"
                        app:helperTextTextColor="@color/red"
                        app:hintTextColor="#4E4A4A">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edtstopname"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="text"
                            android:textColor="@color/colorPrimary"
                            android:textSize="13sp"
                            android:textStyle="normal" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/TermsCheckbox"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignParentRight="true"
                            android:layout_marginBottom="0dp"
                            android:text="@string/i_agree_all_the"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/termandconditon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="0dp"
                            android:text="@string/term_and_condition"
                            android:textColor="@color/red"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/btnSubmit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:backgroundTint="@color/colorPrimary"
                        android:gravity="center"
                        android:text="@string/submit"
                        android:textAllCaps="true" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/note_please_bring_two_passport_size_pictures_when_you_come_for_receive_your_bus_card"
                        android:textColor="@color/colorPrimary" />
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>